--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
           <li><a href="#seis">Historia y Desarrollo Móvil</a></li>
           <li><a href="#siete">Layout,vistas,ciclo de vida, Estado</a></li>
           <li><a href="#ocho">Vistas con Adaptadores</a></li>
+          <li><a href="#nueve"></a></li>
+          <li><a href="#diez"></a></li>
+          <li><a href="#once"></a></li>
+          <li><a href="#doce"></a></li>
+          <li><a href="#trece"></a></li>
         </ol>
       </div>
     </section>
@@ -467,7 +472,7 @@
     <article id="nueve" class="post invert style2 alt">
       <div class="image">
         <img
-          src="images/VistasConAdaptadores/1.png"
+          src=""
           alt=""
           width="70%"
           height="159"
@@ -479,7 +484,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="">Titulo</a>
+              <a href=""></a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info"></p>
@@ -490,7 +495,7 @@
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/VCA.html" class="button alt">Leer mas</a>
+              <a href="" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
@@ -501,6 +506,186 @@
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
           <a href="#diez" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- diez -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="diez" class="post style2">
+      <div class="image">
+        <img
+          src=""
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/VCA.html"></a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info"></p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify"></p>
+
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#nueve" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#once" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- once -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="once" class="post invert style2 alt">
+      <div class="image">
+        <img
+          src=""
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href=""></a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info"></p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify"></p>
+
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#diez" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#doce" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- doce -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="doce" class="post style2">
+      <div class="image">
+        <img
+          src=""
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href=""></a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info"></p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify"></p>
+
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#once" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#trece" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- trece -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="trece" class="post invert style2 alt">
+      <div class="image">
+        <img
+          src=""
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href=""></a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info"></p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify"></p>
+
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#doce" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
