--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#nueve"></a></li>
           <li><a href="#diez"></a></li>
           <li><a href="#once"></a></li>
-          <li><a href="#doce"></a></li>
+          <li><a href="#doce">Introducción a las actividades</a></li>
           <li><a href="#trece"></a></li>
         </ol>
       </div>
@@ -607,7 +607,7 @@
     <article id="doce" class="post style2">
       <div class="image">
         <img
-          src=""
+          src="images/Introactividades/desarrollo-de-aplicaciones-moviles.png"
           alt=""
           width="70%"
           height="159"
@@ -619,18 +619,18 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href=""></a>
+              <a href="">Introducción a las Actividades</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info"></p>
+            <p class="info">16/11/2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify"></p>
+          <p align="justify">La clase Activity es un componente clave de una app para Android, y la forma que se inician y se crean las actividades es una parte fundamental del modelo de aplicación en la plataforma. Esta sección te introduce el concepto de actividades y te proporciona una guía simple sobre como utilizar y trabajar con ellas.</p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="" class="button alt">Leer mas</a>
+              <a href="sites/Introduccionactividades.html" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
@@ -652,7 +652,7 @@
     <article id="trece" class="post invert style2 alt">
       <div class="image">
         <img
-          src=""
+          src=
           alt=""
           width="70%"
           height="159"
