--- a/sites/tareasypilas.html
+++ b/sites/tareasypilas.html
@@ -28,7 +28,7 @@
     </header>
 
     <div>
-      <a href="" style="float: left; background-color: black; padding: 1rem"
+      <a href="actividadyexpulsion.html" style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a href="" style="float: right; background-color: black; padding: 1rem"
@@ -298,7 +298,7 @@ presente.
 	
     </section>
     <div>
-      <a href="" style="float: left; background-color: black; padding: 1rem"
+      <a href="actividadyexpulsion.html" style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a href="" style="float: right; background-color: black; padding: 1rem"
