--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     <article id="trece" class="post invert style2 alt">
       <div class="image">
         <img
-          src=
+          src="../dordonez-ute-moviles.github.io/images/Interfaz/disenio2.jpg"
           alt=""
           width="70%"
           height="159"
@@ -664,18 +664,18 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href=""></a>
+              <a href="">Interfaz y Diseño</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info"></p>
+            <p class="info">16/11/2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify"></p>
+          <p align="justify">La interfaz de usuario (IU) de una app de Android se compila como una jerarquía de diseños y widgets. Los diseños son objetos ViewGroup, contenedores que controlan cómo se posicionan sus vistas secundarias en la pantalla. Los widgets son objetos View, componentes de la IU, como botones y cuadros de texto.</p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="" class="button alt">Leer mas</a>
+              <a href="sites/interfaz.html" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
