--- a/sites/actividadyexpulsion.html
+++ b/sites/actividadyexpulsion.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<!--Poner el titulo de la clase-->
-		<title>Layout,vistas,ciclo de vida, estado</title>
+		<title>Actividades</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -50,7 +50,7 @@
 					</header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
                     <ol>
-					<li><a href="">El concepto de Actividades</a></li>
+					<li><a href="Introduccionactividades.html">El concepto de Actividades</a></li>
 					
                     <li><a href="actividadyexpulsion.html">Estado de actividad y expulsión de memoria</a></li>
 					<li><a href="">Información sobre las tareas y pila de actividades</a></li>
