--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li><a href="#seis">Historia y Desarrollo Móvil</a></li>
           <li><a href="#siete">Layout,vistas,ciclo de vida, Estado</a></li>
           <li><a href="#ocho">Vistas con Adaptadores</a></li>
-          <li><a href="#nueve">Menús & fragments</a></li>
+          <li><a href="#nueve"></a></li>
           <li><a href="#diez"></a></li>
           <li><a href="#once"></a></li>
           <li><a href="#doce"></a></li>
@@ -470,60 +470,47 @@
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
     <article id="nueve" class="post invert style2 alt">
-  <div class="image">
-    <img
-      src="images/Menu/1.jpg"
-      alt=""
-      width="70%"
-      height="159"
-      data-position="20% center"
-    />
-  </div>
-  <div class="content">
-    <div class="inner">
-      <header>
-        <!--Apuntar al html con el nombre de la clase-->
-        <h2>
-          <a href="sites/Menus.html">Menús & fragments</a>
-        </h2>
-        <!--Fecha de la clase-->
-        <p class="info">12 de Noviembre del 2020</p>
-      </header>
-      <!--Pequeña descripcion del tema-->
-      <strong>Menús</strong>
-      <p align="justify">
+      <div class="image">
+        <img
+          src=""
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href=""></a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info"></p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify"></p>
 
-        Los menús son un componente común de la interfaz de usuario en muchos
-        tipos de aplicaciones.Para proporcionar una experiencia de usuario
-        conocida y uniforme, debes usar las API de Menu a fin de presentar
-        al usuario acciones y otras opciones en las actividades.
-      </p>
-      <strong>Fragment</strong>
-      <p align="justify">
-      Representa un comportamiento o una parte de la interfaz
-      de usuario en una FragmentActivity . Puedes combinar varios fragmentos
-      en una sola actividad para crear una IU multipanel y volver a usar un
-      fragmento en diferentes actividades.
-      </p>
-      <ul class="actions">
-        <!--Apuntar al html con el nombre de la clase-->
-        <li>
-          <a href="sites/Menus.html" class="button alt">Leer mas</a>
-        </li>
-      </ul>
-    </div>
-    <div class="postnav">
-      <!--Poner el numero de id anterior-->
-      <a href="#ocho" class="scrolly prev"
-        ><span class="icon fa-chevron-up"></span
-      ></a>
-      <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-      <a href="#diez" class="scrolly next"
-        ><span class="icon fa-chevron-down"></span
-      ></a>
-    </div>
-  </div>
-</article>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#ocho" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#diez" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
     <!-- diez -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
