--- a/sites/actividadyexpulsion.html
+++ b/sites/actividadyexpulsion.html
@@ -22,12 +22,12 @@
 		  </header>
 		  <div>
 			<a
-        href="histomov.html"
+        href="Introduccionactividades.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Estilosytemas.html"
+        href="tareasypilas.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -368,12 +368,12 @@ Cuando la misma instancia de la actividad cubierta vuelve al primer plano, el si
 			<div>
 				
 				<a
-        href="histomov.html"
+        href="Introduccionactividades.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Estilosytemas.html"
+        href="tareasypilas.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
