--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
     <article id="diez" class="post style2">
       <div class="image">
         <img
-          src=""
+          src="images/Mainfest/m1.png"
           alt=""
-          width="70%"
+          width="60%"
           height="159"
           data-position="20% center"
         />
@@ -529,18 +529,24 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/VCA.html"></a>
+              <a href="sites/MaitfestyRecursos.html">Manifest y Recursos</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info"></p>
+            <p class="info">66 de Noviembre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify"></p>
+          <p align="justify"> El archivo Manifiesto es una forma de indicar a los navegadores web, y en especial a los dispositivos móviles, cómo mostrar tu App. Es básicamente un archivo JSON donde específicas diversas propiedades con sus valores.
+
+            El manifiesto debe colocarse en la raíz de tu aplicación, en un archivo llamado manifest.json. En él especificamos cosas como el nombre de la aplicación, el icono o iconos de la aplicación, un nombre, si se debe mostrar en vertical u horizontal, temas de colores que encajen con el look & feel de tu sitio, etc.</p>
+                      <p align="justify">
+                      Los recursos  ayudan a que nuestro proyecto se adapte a diferentes idiomas o tipos de pantalla ya que hoy en día hay mucha variedad de dispositivos con android y cada uno posee características distintas. En tiempo de ejecucion, Android utiliza recursos adecuadamentes segun la configuracionasignada
+            
+                      </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="" class="button alt">Leer mas</a>
+              <a href="sites/MaitfestyRecursos.html" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
