--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="#diez"></a></li>
           <li><a href="#once"></a></li>
           <li><a href="#doce">Introducción a las actividades</a></li>
-          <li><a href="#trece"></a></li>
+          <li><a href="#trece"></a>Interfaz y diseño</li>
         </ol>
       </div>
     </section>
@@ -553,7 +553,7 @@
             El manifiesto debe colocarse en la raíz de tu aplicación, en un archivo llamado manifest.json. En él especificamos cosas como el nombre de la aplicación, el icono o iconos de la aplicación, un nombre, si se debe mostrar en vertical u horizontal, temas de colores que encajen con el look & feel de tu sitio, etc.</p>
                       <p align="justify">
                       Los recursos  ayudan a que nuestro proyecto se adapte a diferentes idiomas o tipos de pantalla ya que hoy en día hay mucha variedad de dispositivos con android y cada uno posee características distintas. En tiempo de ejecucion, Android utiliza recursos adecuadamentes segun la configuracionasignada
-            
+
                       </p>
 
           <ul class="actions">
