--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="#diez"></a></li>
           <li><a href="#once"></a></li>
           <li><a href="#doce">Introducción a las actividades</a></li>
-          <li><a href="#trece"></a>Interfaz y diseño</li>
+          <li><a href="#trece">Interfaz y diseño</a></li>
         </ol>
       </div>
     </section>
