--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li><a href="#seis">Historia y Desarrollo Móvil</a></li>
           <li><a href="#siete">Layout,vistas,ciclo de vida, Estado</a></li>
           <li><a href="#ocho">Vistas con Adaptadores</a></li>
-          <li><a href="#nueve">Menús & fragments</a></li>
+          <li><a href="#nueve">Menús & fragmentos</a></li>
           <li><a href="#diez"></a></li>
           <li><a href="#once"></a></li>
           <li><a href="#doce">Introducción a las actividades</a></li>
@@ -484,7 +484,7 @@
       <header>
         <!--Apuntar al html con el nombre de la clase-->
         <h2>
-          <a href="sites/Menus.html">Menús & fragments</a>
+          <a href="sites/Menus.html">Menús & fragmentos</a>
         </h2>
         <!--Fecha de la clase-->
         <p class="info">12 de Noviembre del 2020</p>
