--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <article id="once" class="post invert style2 alt">
       <div class="image">
         <img
-          src=""
+          src="images/Intent/intent_index.jpg"
           alt=""
           width="70%"
           height="159"
@@ -593,13 +593,16 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href=""></a>
+              <a href="">Intent</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info"></p>
+            <p class="info">16 de Noviembre del 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify"></p>
+          <p align="justify">
+            Una intent es un objeto de acción que puedes usar para solicitar una acción de otro componente de la aplicación, dentro de este capítulo vamos a conocer
+            lo que es y como utilizar e implementar la gran mayoria de sus utilidades.
+          </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
