--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <li><a href="#seis">Historia y Desarrollo Móvil</a></li>
           <li><a href="#siete">Layout,vistas,ciclo de vida, Estado</a></li>
           <li><a href="#ocho">Vistas con Adaptadores</a></li>
-          <li><a href="#nueve">Menús & fragmentos</a></li>
-          <li><a href="#diez"></a></li>
-          <li><a href="#once"></a></li>
+          <li><a href="#nueve">Menús & fragments</a></li>
+          <li><a href="#diez">Manifest y Recursos</a></li>
+          <li><a href="#once">Intent</a></li>
           <li><a href="#doce">Introducción a las actividades</a></li>
-          <li><a href="#trece">Interfaz y diseño</a></li>
+          <li><a href="#trece">Interfaz y Diseño</a></li>
         </ol>
       </div>
     </section>
@@ -593,7 +593,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="">Intent</a>
+              <a href="sites/">Intent</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">16 de Noviembre del 2020</p>
@@ -641,7 +641,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="">Introducción a las Actividades</a>
+              <a href="sites/Introduccionactividades.html">Introducción a las Actividades</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">16/11/2020</p>
@@ -686,7 +686,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="">Interfaz y Diseño</a>
+              <a href="sites/interfaz.html">Interfaz y Diseño</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">16/11/2020</p>
