--- a/sites/MaitfestyRecursos.html
+++ b/sites/MaitfestyRecursos.html
@@ -22,7 +22,7 @@
 
     <div>
       <a
-        href=""
+        href="Menus.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
@@ -302,7 +302,7 @@ por lo general lo elementos de un mismo nivel  no están ordenado pero siempre u
     </section>
     <div>
       <a
-        href=""
+        href="Menus.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
