--- a/sites/Menus.html
+++ b/sites/Menus.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a href="estado.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="MaitfestyRecursos.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -192,7 +192,7 @@
 			</section>
 			<div>
 				<a href="estado.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="MaitfestyRecursos.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
