--- a/sites/Introduccionactividades.html
+++ b/sites/Introduccionactividades.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a
-        href="histomov.html"
+        href="Intent.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
@@ -262,7 +262,7 @@ La siguiente devolución de llamada que el sistema invoca puede ser onRestart()
 			<div>
 				
 				<a
-        href=""
+        href="Intent.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
