--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="" class="button alt">Leer mas</a>
+              <a href="sites/Intent.html" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
