--- a/sites/Intent.html
+++ b/sites/Intent.html
@@ -22,12 +22,12 @@
 		  </header>
 		  <div>
 			<a
-        href="histomov.html"
+        href="MaitfestyRecursos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="actividadyexpulsion.html"
+        href="Introduccionactividades.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a>
 		  </div>
