--- a/sites/Intent.html
+++ b/sites/Intent.html
@@ -700,12 +700,12 @@ Los espacios de ls string pueden codificarse con %20 o reeplazarse por el signo 
 			<div>
 
 				<a
-        href=""
+        href="MaitfestyRecursos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="actividadyexpulsion.html"
+        href="Introduccionactividades.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
