--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/">Intent</a>
+              <a href="sites/Intent.html">Intent</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">16 de Noviembre del 2020</p>
