--- a/sites/MaitfestyRecursos.html
+++ b/sites/MaitfestyRecursos.html
@@ -27,7 +27,7 @@
         >Anterior</a
       >
       <a
-        href=""
+        href="Intent.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -307,7 +307,7 @@ por lo general lo elementos de un mismo nivel  no están ordenado pero siempre u
         >Anterior</a
       >
       <a
-        href=""
+        href="Intent.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
