--- a/sites/interfaz.html
+++ b/sites/interfaz.html
@@ -95,12 +95,12 @@
 
     <div>
       <a
-        href="Introduccionactividades.html"
+        href="diseñoydesarrollomovil.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="layout.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -537,12 +537,12 @@
     </section>
     <div>
       <a
-        href="Introduccionactividades.html"
+        href="diseñoydesarrollomovil.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="layout.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
